force-app/main/default/objects/Product2__x/Product2__x.object-meta.xml
<CustomObject>
    <externalDataSource>TC_Production</externalDataSource>
    <externalName>Product2</externalName>
    <label>TC Product</label>
    <pluralLabel>TC Products</pluralLabel>
</CustomObject>