force-app/main/default/objects/Product2__x/fields/AH_Product_ID_c__c.field-meta.xml
<CustomField>
    <fullName>AH_Product_ID_c__c</fullName>
    <externalDeveloperName>AH_Product_ID__c</externalDeveloperName>
    <label>AH Product ID</label>
    <length>18</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>