force-app/main/default/objects/Product2__x/fields/Allowable_Discount_DOS_SM_ISM_c__c.field-meta.xml
<CustomField>
    <fullName>Allowable_Discount_DOS_SM_ISM_c__c</fullName>
    <externalDeveloperName>Allowable_Discount_DOS_SM_ISM__c</externalDeveloperName>
    <label>Allowable Discount - DOS/SM/ISM</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>