force-app/main/default/objects/Product2__x/fields/Clone_Contract_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Clone_Contract_Type_c__c</fullName>
    <externalDeveloperName>Clone_Contract_Type__c</externalDeveloperName>
    <label>Renewal Contract Type</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Renew</fullName>
            </value>
            <value>
                <fullName>Repeat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>