force-app/main/default/objects/Product2__x/fields/Eligible_for_Auto_Renew_c__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Auto_Renew_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Eligible_for_Auto_Renew__c</externalDeveloperName>
    <inlineHelpText>This box should be selected (True) if this product is eligible to auto-renew. OPTYs with this box selected will have their renewal automatically close 1 day prior to the renewal start date if they have not individually opted out of auto renew.</inlineHelpText>
    <label>Eligible for Auto-Renew</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>