force-app/main/default/objects/Product2__x/fields/Exclude_From_Account_Summary_c__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Account_Summary_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Exclude_From_Account_Summary__c</externalDeveloperName>
    <label>Exclude From Account Summary</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>