force-app/main/default/objects/Product2__x/fields/External_Product_Code_c__c.field-meta.xml
<CustomField>
    <fullName>External_Product_Code_c__c</fullName>
    <externalDeveloperName>External_Product_Code__c</externalDeveloperName>
    <label>External Product Code</label>
    <length>50</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>