force-app/main/default/objects/Product2__x/fields/ExternalDataSourceId__c.field-meta.xml
<CustomField>
    <fullName>ExternalDataSourceId__c</fullName>
    <externalDeveloperName>ExternalDataSourceId</externalDeveloperName>
    <label>External Data Source ID</label>
    <length>18</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>