force-app/main/default/objects/Product2__x/fields/Flash_Product_c__c.field-meta.xml
<CustomField>
    <fullName>Flash_Product_c__c</fullName>
    <externalDeveloperName>Flash_Product__c</externalDeveloperName>
    <inlineHelpText>to align salesforce products to products listed in the flash</inlineHelpText>
    <label>Flash Product</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>AIP</fullName>
            </value>
            <value>
                <fullName>Basic Bundle</fullName>
            </value>
            <value>
                <fullName>Consortia</fullName>
            </value>
            <value>
                <fullName>Demand360 / Demand Position</fullName>
            </value>
            <value>
                <fullName>DRM</fullName>
            </value>
            <value>
                <fullName>Enterprise Car</fullName>
            </value>
            <value>
                <fullName>Enterprise Consulting</fullName>
            </value>
            <value>
                <fullName>Enterprise Hotel</fullName>
            </value>
            <value>
                <fullName>Featured Property</fullName>
            </value>
            <value>
                <fullName>GDS Media</fullName>
            </value>
            <value>
                <fullName>GMS</fullName>
            </value>
            <value>
                <fullName>iHOS</fullName>
            </value>
            <value>
                <fullName>iHotelier &amp; Other Transactional</fullName>
            </value>
            <value>
                <fullName>Link</fullName>
            </value>
            <value>
                <fullName>Meta</fullName>
            </value>
            <value>
                <fullName>Non-Hotel</fullName>
            </value>
            <value>
                <fullName>Other Business Intelligence</fullName>
            </value>
            <value>
                <fullName>Other Media Solutions</fullName>
            </value>
            <value>
                <fullName>Other Reservation Solutions</fullName>
            </value>
            <value>
                <fullName>Other Video Solutions</fullName>
            </value>
            <value>
                <fullName>Other Web Solutions</fullName>
            </value>
            <value>
                <fullName>PPC</fullName>
            </value>
            <value>
                <fullName>Price Position</fullName>
            </value>
            <value>
                <fullName>Rate360 / RateView</fullName>
            </value>
            <value>
                <fullName>Single Media Agency</fullName>
            </value>
            <value>
                <fullName>Single Media Subscription</fullName>
            </value>
            <value>
                <fullName>Spotlight</fullName>
            </value>
            <value>
                <fullName>Sync</fullName>
            </value>
            <value>
                <fullName>Travelclick Bundle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>