force-app/main/default/objects/Product2__x/fields/InSite_Landing_URL_c__c.field-meta.xml
<CustomField>
    <fullName>InSite_Landing_URL_c__c</fullName>
    <externalDeveloperName>InSite_Landing_URL__c</externalDeveloperName>
    <label>InSite Landing URL</label>
    <length>255</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>