force-app/main/default/objects/Product2__x/fields/Internal_Product_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Internal_Product_ID_c__c</fullName>
    <externalDeveloperName>Internal_Product_ID__c</externalDeveloperName>
    <label>Internal Product ID</label>
    <length>30</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>