force-app/main/default/objects/Product2__x/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>IsActive</externalDeveloperName>
    <label>Active</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>