force-app/main/default/objects/Product2__x/fields/Product_Catalog_c__c.field-meta.xml
<CustomField>
    <fullName>Product_Catalog_c__c</fullName>
    <externalDeveloperName>Product_Catalog__c</externalDeveloperName>
    <label>Product Catalog</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WebSolutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>