force-app/main/default/objects/Product2__x/fields/Product_Category_c__c.field-meta.xml
<CustomField>
    <fullName>Product_Category_c__c</fullName>
    <externalDeveloperName>Product_Category__c</externalDeveloperName>
    <label>Product Category</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>GDS Advertising</fullName>
            </value>
            <value>
                <fullName>Hotelligence Family</fullName>
            </value>
            <value>
                <fullName>iHotelier</fullName>
            </value>
            <value>
                <fullName>Non-PPC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other IMS</fullName>
            </value>
            <value>
                <fullName>PPC</fullName>
            </value>
            <value>
                <fullName>Preferred Placement</fullName>
            </value>
            <value>
                <fullName>Rate &amp; Availability</fullName>
            </value>
            <value>
                <fullName>Revenue Management</fullName>
            </value>
            <value>
                <fullName>SearchVIEW</fullName>
            </value>
            <value>
                <fullName>VFML</fullName>
            </value>
            <value>
                <fullName>Other GDS Advertising</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>