force-app/main/default/objects/Product2__x/fields/Product_Level_2_c__c.field-meta.xml
<CustomField>
    <fullName>Product_Level_2_c__c</fullName>
    <externalDeveloperName>Product_Level_2__c</externalDeveloperName>
    <inlineHelpText>Level 2 Product Grouping</inlineHelpText>
    <label>Product Level 2</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BI-Subscriptions</fullName>
            </value>
            <value>
                <fullName>Bundle</fullName>
            </value>
            <value>
                <fullName>Digital Media</fullName>
            </value>
            <value>
                <fullName>Enterprise Shopping</fullName>
            </value>
            <value>
                <fullName>GDS Media</fullName>
            </value>
            <value>
                <fullName>GMS</fullName>
            </value>
            <value>
                <fullName>Goal</fullName>
            </value>
            <value>
                <fullName>Preference Media</fullName>
            </value>
            <value>
                <fullName>Reservation Solutions</fullName>
            </value>
            <value>
                <fullName>Video Solutions</fullName>
            </value>
            <value>
                <fullName>Web Solutions</fullName>
            </value>
            <value>
                <fullName>DA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>