force-app/main/default/objects/Product2__x/fields/Product_Level_3_c__c.field-meta.xml
<CustomField>
    <fullName>Product_Level_3_c__c</fullName>
    <externalDeveloperName>Product_Level_3__c</externalDeveloperName>
    <inlineHelpText>Level 3 Product Grouping</inlineHelpText>
    <label>Product Level 3</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>AIP</fullName>
            </value>
            <value>
                <fullName>Bundle</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Channel Management</fullName>
            </value>
            <value>
                <fullName>Consortia</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>DA</fullName>
            </value>
            <value>
                <fullName>Demand</fullName>
            </value>
            <value>
                <fullName>DRM</fullName>
            </value>
            <value>
                <fullName>Featured Property</fullName>
            </value>
            <value>
                <fullName>GDS Media</fullName>
            </value>
            <value>
                <fullName>GMS</fullName>
            </value>
            <value>
                <fullName>Goal</fullName>
            </value>
            <value>
                <fullName>Guestview</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>iHotelier</fullName>
            </value>
            <value>
                <fullName>PPC</fullName>
            </value>
            <value>
                <fullName>Price Position</fullName>
            </value>
            <value>
                <fullName>Rate</fullName>
            </value>
            <value>
                <fullName>Searchview</fullName>
            </value>
            <value>
                <fullName>Single Media Agency</fullName>
            </value>
            <value>
                <fullName>Single Media Subscription</fullName>
            </value>
            <value>
                <fullName>Spotlight</fullName>
            </value>
            <value>
                <fullName>Trip Advisor</fullName>
            </value>
            <value>
                <fullName>TVS</fullName>
            </value>
            <value>
                <fullName>Web - Other</fullName>
            </value>
            <value>
                <fullName>Web - Premium</fullName>
            </value>
            <value>
                <fullName>Web - Pro</fullName>
            </value>
            <value>
                <fullName>Web - SEO / SMO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>