force-app/main/default/objects/Product2__x/fields/Product_Level_4_c__c.field-meta.xml
<CustomField>
    <fullName>Product_Level_4_c__c</fullName>
    <externalDeveloperName>Product_Level_4__c</externalDeveloperName>
    <inlineHelpText>Level 4 Product Grouping</inlineHelpText>
    <label>Product Level 4</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency360</fullName>
            </value>
            <value>
                <fullName>Agency Position</fullName>
            </value>
            <value>
                <fullName>AIP</fullName>
            </value>
            <value>
                <fullName>Bundle</fullName>
            </value>
            <value>
                <fullName>Bundled Agency360</fullName>
            </value>
            <value>
                <fullName>Bundled Demand360</fullName>
            </value>
            <value>
                <fullName>Bundled Featured Property</fullName>
            </value>
            <value>
                <fullName>Bundled GMS</fullName>
            </value>
            <value>
                <fullName>Bundled Guestview</fullName>
            </value>
            <value>
                <fullName>Bundled iHotelier</fullName>
            </value>
            <value>
                <fullName>Bundled Rate360</fullName>
            </value>
            <value>
                <fullName>Bundled Single Media Subscription</fullName>
            </value>
            <value>
                <fullName>Bundled Spotlight</fullName>
            </value>
            <value>
                <fullName>Bundled TVS</fullName>
            </value>
            <value>
                <fullName>Bundled Web</fullName>
            </value>
            <value>
                <fullName>Bundled Web - Other</fullName>
            </value>
            <value>
                <fullName>Bundled Web - Premium</fullName>
            </value>
            <value>
                <fullName>Bundled Web - Pro</fullName>
            </value>
            <value>
                <fullName>Bundled Web - SEO/SMO</fullName>
            </value>
            <value>
                <fullName>Bundled Web - WebBuilder</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Consortia</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Demand360</fullName>
            </value>
            <value>
                <fullName>Demand Position</fullName>
            </value>
            <value>
                <fullName>Destination Insights</fullName>
            </value>
            <value>
                <fullName>DRM</fullName>
            </value>
            <value>
                <fullName>EMA</fullName>
            </value>
            <value>
                <fullName>Featured Property</fullName>
            </value>
            <value>
                <fullName>Forecast Adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>