force-app/main/default/objects/Product2__x/fields/Rate_Plan_c__c.field-meta.xml
<CustomField>
    <fullName>Rate_Plan_c__c</fullName>
    <externalDeveloperName>Rate_Plan__c</externalDeveloperName>
    <label>Rate Plan*</label>
    <length>255</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>