force-app/main/default/objects/Product2__x/fields/Renewal_Record_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Record_Type_c__c</fullName>
    <externalDeveloperName>Renewal_Record_Type__c</externalDeveloperName>
    <label>Renewal Record Type</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EZYield</fullName>
            </value>
            <value>
                <fullName>EZYield-READ ONLY</fullName>
            </value>
            <value>
                <fullName>Hotelligence360</fullName>
            </value>
            <value>
                <fullName>Hotelligence360-READ ONLY</fullName>
            </value>
            <value>
                <fullName>Market Vision &amp; GMS</fullName>
            </value>
            <value>
                <fullName>Market Vision &amp; GMS-READ ONLY</fullName>
            </value>
            <value>
                <fullName>New Subscription &amp; GDS</fullName>
            </value>
            <value>
                <fullName>New Subscription &amp; GDS-READ ONLY</fullName>
            </value>
            <value>
                <fullName>Subscription Renewal</fullName>
            </value>
            <value>
                <fullName>Subscription Renewal-READ ONLY</fullName>
            </value>
            <value>
                <fullName>Q2C</fullName>
            </value>
            <value>
                <fullName>Q2C READ ONLY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>