force-app/main/default/objects/Product2__x/fields/Renewal_Start_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Start_Date_c__c</fullName>
    <externalDeveloperName>Renewal_Start_Date__c</externalDeveloperName>
    <label>Renewal Start Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prior End Date + 1 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>