force-app/main/default/objects/Product2__x/fields/zqu_Category_c__c.field-meta.xml
<CustomField>
    <fullName>zqu_Category_c__c</fullName>
    <externalDeveloperName>zqu__Category__c</externalDeveloperName>
    <label>Category</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Base Products</fullName>
            </value>
            <value>
                <fullName>Add On Services</fullName>
            </value>
            <value>
                <fullName>Miscellaneous Products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>