force-app/main/default/objects/Product2__x/fields/zqu_Deleted_c__c.field-meta.xml
<CustomField>
    <fullName>zqu_Deleted_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>zqu__Deleted__c</externalDeveloperName>
    <inlineHelpText>Flag for soft deletion</inlineHelpText>
    <label>Deleted</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>