force-app/main/default/objects/Product2__x/fields/zqu_EffectiveEndDate_c__c.field-meta.xml
<CustomField>
    <fullName>zqu_EffectiveEndDate_c__c</fullName>
    <externalDeveloperName>zqu__EffectiveEndDate__c</externalDeveloperName>
    <inlineHelpText>The Effective End Date of the Product.</inlineHelpText>
    <label>Effective End Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>