force-app/main/default/objects/Product2__x/fields/zqu_SKU2_c__c.field-meta.xml
<CustomField>
    <fullName>zqu_SKU2_c__c</fullName>
    <externalDeveloperName>zqu__SKU2__c</externalDeveloperName>
    <inlineHelpText>This field will be auto-generated if no value specified.</inlineHelpText>
    <label>SKU</label>
    <length>70</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>