force-app/main/default/objects/Product2__x/fields/zqu_SyncStatus_c__c.field-meta.xml
<CustomField>
    <fullName>zqu_SyncStatus_c__c</fullName>
    <externalDeveloperName>zqu__SyncStatus__c</externalDeveloperName>
    <label>Sync Status</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Synced</fullName>
            </value>
            <value>
                <fullName>Updated</fullName>
            </value>
            <value>
                <fullName>Syncing</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>