force-app/main/default/objects/Product2__x/fields/zqu_Type_c__c.field-meta.xml
<CustomField>
    <fullName>zqu_Type_c__c</fullName>
    <externalDeveloperName>zqu__Type__c</externalDeveloperName>
    <label>Type</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standalone</fullName>
            </value>
            <value>
                <fullName>Bundle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>