force-app/main/default/objects/Product2__x/fields/zqu_ZuoraId_c__c.field-meta.xml
<CustomField>
    <fullName>zqu_ZuoraId_c__c</fullName>
    <externalDeveloperName>zqu__ZuoraId__c</externalDeveloperName>
    <inlineHelpText>The Zuora Id (external primary key) of this Product.</inlineHelpText>
    <label>Zuora Id</label>
    <length>32</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>